--- a/pages/index.sass
+++ b/pages/index.sass
@@ -1,7 +1,11 @@
-@import "../global"
+@import '../global'
 
 .example
-  @include opacity(0.5)
-  font-size: 36px
-  width: 300px
-  display: flex
+  @include opacity(0.85)
+  font-family: 'Conduit', 'Trebuchet MS', Helvetica, sans-serif
+  p
+    font-size: 400
+  h2
+    font-weight: 700
+  h6
+    font-weight: 200
