adding fonts to prod build

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,7 @@
 $primary: #86888A;
 $secondary: #DCDDDE;
 $accent: #006CB7;
-$fonts-dir: '../static/fonts/';
+$fonts-dir: '/static/fonts/';
 
 $max-width: 640px;
 $mobile-bp: 500px;
